# Arquitectura

./: .gitignore  CMakeLists.txt
common/: CMakeLists.txt  PPMMetadata.hpp  binaryio.cpp  binaryio.hpp  getPPMMetadata.cpp  imtool_soa_aux.cpp  imtool_soa_aux.hpp  misc.cpp  misc.hpp  progargs.cpp  progargs.hpp
ftest-aos/: CMakeLists.txt  test_scaling.cpp
ftest-soa/: CMakeLists.txt  ftest.cpp
imgaos/: CMakeLists.txt  imageaos.cpp  imageaos.hpp
imgsoa/: CMakeLists.txt  imagesoa.cpp  imagesoa.hpp
imtool-aos/: main.cpp
imtool-soa/: main.cpp
utest-common/: CMakeLists.txt  ejecutar_todos_los_test.cpp  getPPMMetadata_test.cpp  getPPMMetadata_test.hpp  progargs_test.cpp
utest-imgaos/: CMakeLists.txt  one_test.cpp
utest-imgsoa/: CMakeLists.txt  utest-imgsoa.cpp  utest-soa.cpp
